<resources>
    <string name="app_name">Social Network</string>

    <string name="post_title">Title</string>
    <string name="add_post">Add a post</string>
    <string name="description">Description</string>
    <string name="add">Poster</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="i_have_an_account">I have an account already</string>
    <string name="create_account">New user ? create account</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>